--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "apexcharts": "^4.5.0",
     "axios": "^1.8.4",
     "core-js": "^3.8.3",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
